# gcp-error-triager-agent

./: .gitignore  gcp-error-triager.code-workspace
.claude/agents/: python-code-reviewer.md
.claude/commands/: git-commit.md
error_simulator/: .gitignore  DEPLOYMENT.md  Dockerfile  PUBSUB_ALERTS_README.md  README.md  TEST_SCRIPT_README.md  check_alerts.py  pyproject.toml  sample_pubsub_alert.json  subscribe_alerts.py  test_simulator.py  trigger_alert.sh
error_simulator/src/: main.py
error_simulator/src/data/: transactions.csv
error_simulator/src/layers/: __init__.py  business_layer.py  data_layer.py  error_generator.py
error_simulator/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
error_trager/: README.md  collect_incident_logs.sh  example_usage.py  incident_logs.json  incident_logs_output.json  pyproject.toml
error_trager/src/: incident_log_collector.py  triage.py
error_triager/: .dockerignore  .gitignore  CLOUD_RUN_DEPLOYMENT.md  Dockerfile  INCIDENT_LOG_COLLECTOR.md  QUICKSTART.md  README.md  collect_incident_logs.sh  deploy.sh  pyproject.toml  test_collector.py  test_mcp_client.py
error_triager/src/: __init__.py  gcp_log_collector.py  gcp_logs_mcp_server.py  incident_log_collector.py
error_triager/terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
